--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activities.JetpackLiveDataDemo" />
+        <activity android:name=".activities.Jetpack" />
         <activity android:name=".activities.CustomCircularProgressBar" />
         <activity android:name=".activities.AnimationsAndTransitions" />
         <activity android:name=".activities.UserInterfaceAndNavigation" />
