--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,12 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    // 启用robolectric时需要添加的
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 dependencies {
@@ -46,10 +52,17 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
-
+    implementation 'org.jetbrains:annotations:16.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    // Required -- JUnit 4 framework
     testImplementation 'junit:junit:4.12'
+    testImplementation 'androidx.test:core:1.0.0'
+    // Optional -- Robolectric environment
+    testImplementation 'org.robolectric:robolectric:4.3'
+    // Optional -- Mockito framework
+    testImplementation "org.mockito:mockito-core:2.28.2"
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'org.jetbrains:annotations:15.0'
 }
