--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".activities.TestUI"></activity>
         <activity android:name=".activities.AnimatorSetDemo" />
         <activity android:name=".activities.AnimatorDemo" />
         <activity android:name=".activities.JetpackLiveDataDemo" />
