--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,11 @@ dependencies {
     implementation 'org.jetbrains:annotations:16.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
+    // Use the most recent version of CameraX, currently that is alpha06.
+    def camerax_version = '1.0.0-alpha06'
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+
     // Required -- JUnit 4 framework
     testImplementation 'junit:junit:4.12'
     testImplementation 'androidx.test:core:1.0.0'
@@ -62,6 +67,7 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.3'
     // Optional -- Mockito framework
     testImplementation "org.mockito:mockito-core:2.28.2"
+
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
