--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.github.crazygit.gist">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.TestUI"></activity>
+        <activity android:name=".activities.CameraXDemo"></activity>
+        <activity android:name=".activities.TestUI" />
         <activity android:name=".activities.AnimatorSetDemo" />
         <activity android:name=".activities.AnimatorDemo" />
         <activity android:name=".activities.JetpackLiveDataDemo" />
