--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,14 @@ dependencies {
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
 
+
+    def nav_version = "2.3.0-alpha06"
+
+    // Java language implementation
+    implementation "androidx.navigation:navigation-fragment:$nav_version"
+    implementation "androidx.navigation:navigation-ui:$nav_version"
+
+
     // Required -- JUnit 4 framework
     testImplementation 'junit:junit:4.12'
     testImplementation 'androidx.test:core:1.0.0'
@@ -67,6 +75,21 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.3'
     // Optional -- Mockito framework
     testImplementation "org.mockito:mockito-core:2.28.2"
+
+    // Room components
+    implementation "androidx.room:room-runtime:$rootProject.roomVersion"
+    annotationProcessor "androidx.room:room-compiler:$rootProject.roomVersion"
+    androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
+
+    // Lifecycle components
+    implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.archLifecycleVersion"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$rootProject.archLifecycleVersion"
+
+    // UI
+    implementation "com.google.android.material:material:$rootProject.materialVersion"
+
+    // Testing
+    androidTestImplementation "androidx.arch.core:core-testing:$rootProject.coreTestingVersion"
 
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
