--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.CameraXDemo"></activity>
+        <activity android:name=".room.NewWordActivity"></activity>
+        <activity android:name=".room.RoomWordSampleActivity" />
+        <activity android:name=".activities.CameraXDemo" />
         <activity android:name=".activities.TestUI" />
         <activity android:name=".activities.AnimatorSetDemo" />
         <activity android:name=".activities.AnimatorDemo" />
